# ros2_fyp

ros2_fyp/config/: mapper_params_online_async.yaml
ros2_fyp/install/: local_setup.sh  setup.sh
ros2_fyp/install/astra_camera/include/astra_camera/: constants.h  device_listener.h  dynamic_params.h  ob_camera_node.h  ob_camera_node_factory.h  ob_frame_listener.h  ob_timer_filter.h  ros_param_backend.h  types.h  utils.h  uvc_camera_driver.h
ros2_fyp/install/astra_camera/include/openni2/: KinectProperties.h  OniCAPI.h  OniCEnums.h  OniCProperties.h  OniCTypes.h  OniEnums.h  OniPlatform.h  OniProperties.h  OniTest.h  OniVersion.h  OpenNI.h  PS1080.h  PSLink.h  PrimeSense.h  SonixCamera.h  util.h
ros2_fyp/install/astra_camera/lib/astra_camera/: list_devices_node
ros2_fyp/install/astra_camera/share/astra_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_fyp/install/astra_camera_msgs/share/astra_camera_msgs/: local_setup.sh  (+5 more)
ros2_fyp/log/: latest_build
ros2_fyp/src/r2_bringup/: CMakeLists.txt
ros2_fyp/src/r2_bringup/launch/: bringup.launch.py
ros2_fyp/src/r2_description/: CMakeLists.txt
ros2_fyp/src/r2_description/launch/: description.launch.py
ros2_fyp/src/r2_description/urdf/: r2.urdf.xacro
ros2_fyp/src/r2_driver/: package.xml  setup.cfg  setup.py
ros2_fyp/src/r2_driver/launch/: r2_driver.launch.py
ros2_fyp/src/r2_driver/r2_driver/: __init__.py  r2_driver_node.py
ros2_fyp/src/r2_wheel_odometry/: package.xml  setup.cfg  setup.py
ros2_fyp/src/r2_wheel_odometry/r2_wheel_odometry/: wheel_odom.py
(+349 files in other folders)
